--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       </style>
     </noscript>
     <div class="card center">
-      <a href="https://www.toprevenuegate.com/zgavx110?key=c208e6da1b27ac4733a713caff8afdd5">
+      <a href="https://www.toprevenuegate.com/fact2en2f0?key=12f102667ae8cd1eb488466edf89a094">
         <div class="main-image"></div>
       </a>
       <div id="content-container">
@@ -310,7 +310,7 @@
           <div class="form-get-the-app">
             <amp-list src="https://pvtasicalientes.app.link/85po56v8qEb?__branch_amp_json=1" layout="flex-item">
               <template type="amp-mustache" id="cta-template">
-               <a href="https://www.toprevenuegate.com/zgavx110?key=c208e6da1b27ac4733a713caff8afdd5" class="cta-button text-light cta-button--no-app-icon">
+               <a href="https://www.toprevenuegate.com/fact2en2f0?key=12f102667ae8cd1eb488466edf89a094" class="cta-button text-light cta-button--no-app-icon">
                  REPRODUCIR VIDEO
                 </a>
                 <amp-iframe
@@ -328,7 +328,7 @@
       </div>
 <!-- Botón redondo mejorado -->
 <div style="position: fixed; bottom: 0; left: 0; width: 100%; text-align: center; background-color: #fa0909; padding: 10px;">
-  <a href="https://www.toprevenuegate.com/zgavx110?key=c208e6da1b27ac4733a713caff8afdd5" style="color: #fff; text-decoration: none; padding: 15px 20px; border-radius: 50px; font-size: 18px; display: inline-block;">
+  <a href="https://www.toprevenuegate.com/fact2en2f0?key=12f102667ae8cd1eb488466edf89a094" style="color: #fff; text-decoration: none; padding: 15px 20px; border-radius: 50px; font-size: 18px; display: inline-block;">
     Reproducir Video
   </a>
 </div>
@@ -347,9 +347,9 @@
         "pvtasicalientes.app.link",
         "pvtasicalientes-alternate.app.link",
         "http://rumb.iblogger.org/",
-        "https://www.toprevenuegate.com/zgavx110?key=c208e6da1b27ac4733a713caff8afdd5",
-        "https://www.toprevenuegate.com/zgavx110?key=c208e6da1b27ac4733a713caff8afdd5",
-        "https://www.toprevenuegate.com/zgavx110?key=c208e6da1b27ac4733a713caff8afdd5"
+        "https://www.toprevenuegate.com/fact2en2f0?key=12f102667ae8cd1eb488466edf89a094",
+        "https://www.toprevenuegate.com/fact2en2f0?key=12f102667ae8cd1eb488466edf89a094",
+        "https://www.toprevenuegate.com/fact2en2f0?key=12f102667ae8cd1eb488466edf89a094"
       ];
     </script>
   </body>
